--- a/index.html
+++ b/index.html
@@ -4,10 +4,202 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Challenge week 5</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <script src="easy.js" defer></script>
     <script src="medium.js" defer></script>
     <script src="hard.js" defer></script>
   </head>
-  <body></body>
+  <body>
+    <div class="container">
+      <h2>Challenge week 5</h2>
+
+      <p>
+        <i>
+          IF YOU USE Google Chrome: Press F12 <span class="orWord">or</span> go
+          to settings -> More tools -> Developer tools
+          <span class="orWord">or</span> Right click and Inspect to see results
+          in console browsers
+        </i>
+      </p>
+
+      <p><b>Easy</b></p>
+      <p>
+        1.Create a function that takes two numbers as arguments and return their
+        sum.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/3LpBLgNRyaHMvNb4j"
+          >Exercise 1 all sentence</a
+        >
+      </p>
+      <p>
+        2.Write a function that takes an integer minutes and converts it to
+        seconds.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/8q54MKnRrm89pSLmW"
+          >Exercise 2 all sentence</a
+        >
+      </p>
+      <p>
+        3.Create a function that takes a number as an argument, increments the
+        number by +1 and returns the result.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/NAQhEoxbofPidLxm9"
+          >Exercise 3 all sentence</a
+        >
+      </p>
+      <p>
+        4. Create a function that takes an array containing only numbers and
+        return the first element.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/QaApgtePE6QrCZ64o"
+          >Exercise 4 all sentence</a
+        >
+      </p>
+      <p>
+        5.There is a single operator in JavaScript, capable of providing the
+        remainder of a division operation. Two numbers are passed as parameters.
+        The first parameter divided by the second parameter will have a
+        remainder, possibly zero. Return that value.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/Q2j5FTFtsk7PdzrQk"
+          >Exercise 5 all sentence</a
+        >
+      </p>
+      <p>
+        6. In this challenge, a farmer is asking you to tell him how many legs
+        can be counted among all his animals. The farmer breeds three species:
+        chickens = 2 legs cows = 4 legs pigs = 4 legs The farmer has counted his
+        animals and he gives you a subtotal for each species. You have to
+        implement a function that returns the total number of legs of all the
+        animals.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/8Qg78sf5SNDEANKti"
+          >Exercise 6 all sentence</a
+        >
+      </p>
+      <p>
+        7. Create a function that returns true if an integer is evenly divisible
+        by 5, and false otherwise.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/iBQYbSHZGhpktLRdn"
+          >Exercise 7 all sentence</a
+        >
+      </p>
+      <p>
+        8.Create a function that takes two strings as arguments and return
+        either true or false depending on whether the total number of characters
+        in the first string is equal to the total number of characters in the
+        second string.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/yHGowWucg3k2kJdZ4"
+          >Exercise 8 all sentence</a
+        >
+      </p>
+      <p>
+        9. Write a function that takes a string name and a number num (either 0
+        or 1) and return "Hello" + name if num is 1, otherwise return "Bye" +
+        name.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/kLa2w7m4h849k8rmW"
+          >Exercise 9 all sentence</a
+        >
+      </p>
+      <hr />
+
+      <p><b>Medium</b></p>
+      <p>
+        1. Create a function that takes a number as an argument. Add up all the
+        numbers from 1 to the number you passed to the function. For example, if
+        the input is 4 then your function should return 10 because 1 + 2 + 3 + 4
+        = 10.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/4gzDuDkompAqujpRi"
+          >Exercise 1 all sentence</a
+        >
+      </p>
+      <p>
+        2. Create a function that takes an array of numbers and return both the
+        minimum and maximum numbers, in that order.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/Q3n42rEWanZSTmsJm"
+          >Exercise 2 all sentence</a
+        >
+      </p>
+      <p>
+        3. Create a function that takes a string and returns a string in which
+        each character is repeated once.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/Mc6Xi4PRw7fDzeMDB"
+          >Exercise 3 all sentence</a
+        >
+      </p>
+      <p>
+        4. A set is a collection of unique items. A set can be formed from an
+        array from removing all duplicate items. Create a function that sorts an
+        array and removes all duplicate items from it.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/Mo6Coy4PpTbZgtDKd"
+          >Exercise 4 all sentence</a
+        >
+      </p>
+      <p>
+        5. Write a function that returns the number of users in a chatroom based
+        on the following rules: <br />
+
+        If there is no one, return "no one online". <br />
+        If there is 1 person, return "user1 online". <br />
+        If there are 2 people, return "user1 and user2 online". <br />
+        If there are n>2 people, return the first two names and add "and n-2
+        more online".'
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/hscAGyt4iNZ3PKy3g"
+          >Exercise 5 all sentence</a
+        >
+      </p>
+      <hr />
+
+      <p><b>Hard</b></p>
+      <p>
+        1. You're given a string of words. You need to find the word "Nemo", and
+        return a string like this: "I found Nemo at [the order of the word you
+        find nemo]!". <br />
+        If you can't find Nemo, return "I can't find Nemo :(".
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/c23dFfNiKbnguSQtq"
+          >Exercise 1 all sentence</a
+        >
+      </p>
+      <p>
+        2. Write a function that converts an object into an array, where each
+        element represents a key-value pair in the form of an array.
+      </p>
+      <p>
+        <a href="https://edabit.com/challenge/pPNAs5PvB3WvnDwDM"
+          >Exercise 2 all sentence</a
+        >
+      </p>
+    </div>
+  </body>
 </html>
